# devtools-assets

./: .all-contributorsrc  .bazelignore  .bazelrc  .eslintrc.js  .gitignore  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  package-lock.json  package.json  plopfile.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.circleci/: config.yml
action/: BUILD  README.md  package.json
action/src/: index.ts
action/src/components/: ActionComponent.tsx  index.ts
action/src/dsl/: Action.tsx
action/src/transform/: index.ts
action/src/types/: index.ts
asset-template/: BUILD.hbs  README.md.hbs  package.json.hbs
asset-template/src/component/: index.tsx.hbs
asset-template/src/dsl/: index.tsx.hbs
asset-template/src/transform/: index.ts.hbs
asset-template/src/types/: index.ts.hbs
assets/action/: BUILD  package.json
assets/action/src/: index.ts
assets/text/: BUILD
assets/text/src/: index.tsx
code-editor/: BUILD  README.md  package.json
code-editor/src/component/: index.tsx
code-editor/src/dsl/: index.tsx
code-editor/src/transform/: index.ts
code-editor/src/types/: index.ts
collection/: BUILD  README.md  package.json
collection/src/: index.ts
collection/src/components/: CollectionComponent.tsx  index.ts
collection/src/dsl/: Collection.tsx
console/: BUILD  README.md  package.json
console/src/component/: index.tsx
console/src/components/: ConsoleComponent.tsx
console/src/dsl/: Console.tsx  index.ts  index.tsx
console/src/transform/: index.ts
console/src/types/: index.ts
copy-to-clipboard/: BUILD  README.md  package.json
copy-to-clipboard/src/component/: index.tsx
copy-to-clipboard/src/dsl/: index.tsx
copy-to-clipboard/src/transform/: index.ts
copy-to-clipboard/src/types/: index.ts
docs/: BUILD
docs/site/: BUILD  README.md  defs.bzl  next.config.mjs  package.json  tsconfig.json
docs/site/pages/: BUILD  BUILD.bazel  _app.tsx  devtools-mdx-page.mdx  first-mdx.mdx  index.tsx  mdx-page.mdx  my-mdx-page.mdx  page.mdx  team.mdx
docs/site/pages/assets/: code-editor.mdx  input.mdx  object-inspector.mdx  radio-group.mdx  stacked-view.mdx  toggle.mdx
docs/storybook/: BUILD  package.json  vite.config.ts
dsl/: BUILD  package.json
flame-graph/: BUILD  README.md  package.json
info/: BUILD  README.md  package.json
input/: BUILD  README.md  package.json
input/src/: index.ts
lib/: vite-storybook-library.ts
list/: BUILD  README.md  package.json
list-item/: BUILD  package.json
navigation/: BUILD  README.md  package.json
object-inspector/: BUILD  README.md  package.json
object-inspector/src/: index.ts
player-plugin/: BUILD  package.json
player-plugin/src/: index.tsx
plugin/: BUILD  README.md  package.json
plugin/src/: index.ts  index.tsx
radio-group/: BUILD  README.md  package.json
radio-item/: BUILD  README.md  package.json
slots/: BUILD  package.json
slots/src/: index.ts
src/: App.tsx  main.tsx  plugin.tsx
src/stories/: Button.stories.ts  Console.stories.ts  Data.stories.mdx  Header.stories.ts  ObjectInspector.stories.ts  ObjectInspector.stories.tsx  Page.tsx
stacked-view/: BUILD  package.json
storybook-static/: project.json
table/: BUILD  README.md  package.json
text/: BUILD  README.md  package.json
toggle/: BUILD  README.md  package.json
typings/: react-flame-graph.d.ts
views/: BUILD  package.json
(+197 files in other folders)
