module(name = "devtools-ui", version = "1.0")

bazel_dep(name = "rules_player")

git_override(module_name = "rules_player", remote = "https://github.com/player-ui/rules_player.git", commit = "e71339c96deeec1f4976fbc04815143ee23d8541")

# bazel_dep(name = "aspect_bazel_lib", version = "1.39.0")
# bazel_dep(name = "aspect_rules_js", version = "1.34.1")
# bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_pkg", version = "0.9.1")
# bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
# bazel_dep(name = "aspect_rules_swc", version = "1.1.0")
# bazel_dep(name = "aspect_rules_webpack", version = "0.14.0")
####### Node.js version #########
# bazel_dep(name = "rules_nodejs", version = "6.0.2")
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.18.0")
#################################


bazel_dep(name = "aspect_bazel_lib", version = "2.7.1")
bazel_dep(name = "aspect_rules_lint", version = "0.18.0")
bazel_dep(name = "aspect_rules_jest", version = "0.20.0")
bazel_dep(name = "aspect_rules_js", version = "1.41.2")
bazel_dep(name = "aspect_rules_swc", version = "1.2.2")
bazel_dep(name = "aspect_rules_ts", version = "2.2.0")
bazel_dep(name = "aspect_rules_rollup", version = "1.0.2")
bazel_dep(name = "aspect_rules_webpack", version = "0.14.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_nodejs", version = "6.1.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    data = [
        "//:package.json",
    ],
    npmrc = "//:.npmrc",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")
